simplify transformation pipeline